--- a/public/baseballSalaries.html
+++ b/public/baseballSalaries.html
@@ -16,7 +16,7 @@
                 <a href="/highestPaidPlayersPerTeamPerYear">Highest Paid Players per Team per Year</a><br /><br />
                 <a href="/teamPayrollPerWinPerYear">Team Payroll per Win per Year</a><br /><br />
                 <a href="/salariesPerTeamPerYear">Salary Data per Team per Year</a><br /><br />
-                <a href="">Trivia Questions</a><br /><br />
+                <a href="trivia.html" target="_blank">Trivia Questions</a><br><br>
             </div>
         </div>
     </main>
