--- a/public/trivia.html
+++ b/public/trivia.html
@@ -32,11 +32,11 @@
 <body>
   <h1>Baseball Salaries Trivia</h1>
   <p>Use website links to find the answers to the following questions.</p>
-
+  <p class="feedback" hidden></p>
   <div class="question p-4">
     <ol>
       <!-- question 1 start -->
-      <li class="mt-4 pt-4 text-white"">
+      <li class="mt-4 pt-4 text-white">
         <p class="text-white">What team had the highest payroll in 2010?</p>
         <div class="form-check">
           <input class="form-check-input" id="q1-yankees" type="radio" name="q1-answer">
@@ -64,7 +64,7 @@
       <!-- question end -->
 
       <!-- question 2 start -->
-      <li class="mt-4">
+      <li class="mt-4 text-white">
         <p class="text-white">Who was the highest paid player on the Tampa Bay Rays in 2001?</p>
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q2-answer" id="q2-damianrolls">
@@ -94,7 +94,7 @@
       <!-- question end -->
 
       <!-- question 3 start -->
-      <li class="mt-4">
+      <li class="mt-4 text-white">
         <p class="text-white">In 2013 Red Sox won the world series who was the highest paid player?</p>
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q3-answer" id="q3-willmiddlebrooks">
@@ -124,7 +124,7 @@
       <!-- question end -->
 
       <!-- question 4 start -->
-      <li class="mt-4">
+      <li class="mt-4 text-white">
         <p class="text-white">In 2008 what was LAD payroll?</p>
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q4-answer" id="q4-137m">
@@ -145,8 +145,8 @@
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="q1-answer" id="q4-97m">
-          <label class="form-check-label text-white" for="q4-97m">
+          <input class="form-check-input" type="radio" name="q4-answer" id="q4-97-793m">
+          <label class="form-check-label text-white" for="q4-97-793m">
             $97,793,900.00
           </label>
         </div>
@@ -154,29 +154,29 @@
       <!-- question end -->
 
       <!-- question 5 start -->
-      <li class="mt-4">
+      <li class="mt-4 text-white">
         <p class="text-white">What was KCR payroll 2012?</p>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="q1-answer" id="q5-55m">
+          <input class="form-check-input" type="radio" name="q5-answer" id="q5-55m">
           <label class="form-check-label text-white" for="q5-55m">
             $55,372,500.00
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="q1-answer" id="q5-196m">
+          <input class="form-check-input" type="radio" name="q5-answer" id="q5-196m">
           <label class="form-check-label text-white" for="q5-196m">
             $196,522,289.00
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="q1-answer" id="q5-60m">
+          <input class="form-check-input" type="radio" name="q5-answer" id="q5-60m">
           <label class="form-check-label text-white" for="q5-60">
             $60,916,225.00
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="q1-answer" id="q5-60m">
-          <label class="form-check-label text-white" for="q5-60">
+          <input class="form-check-input" type="radio" name="q5-answer" id="q5-60-651m">
+          <label class="form-check-label text-white" for="q5-60-651">
             $60,651,000.00
           </label>
         </div>
@@ -184,7 +184,7 @@
       <!-- question end -->
 
       <!-- question 6 start -->
-      <li class="mt-4">
+      <li class="mt-4 text-white">
         <p class="text-white">In 2010 who was highest paid player in FLA?</p>
         <div class="form-check">
           <input class="form-check-input" type="radio" name="q6-answer" id="q6-johnbaker">
@@ -218,6 +218,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
   </script>
+  <script src="trivia.js"></script>
 
 </body>
 
