added some comments

--- a/public/trivia.html
+++ b/public/trivia.html
@@ -36,6 +36,7 @@
   <div class="question p-4">
     <ol>
       <!-- question 1 start -->
+      <!-- mt-4 pt-4 are the bootstrap classes-->
       <li class="mt-4 pt-4 text-white">
         <p class="text-white">What team had the highest payroll in 2010?</p>
         <div class="form-check">
