change paths to work with amazonaws

--- a/public/baseballSalaries.html
+++ b/public/baseballSalaries.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Baseball Salaries</title>
-    <link rel="stylesheet" href="/baseballSalaries.css">
+    <link rel="stylesheet" href="baseballSalaries.css">
 </head>
 
 <body>
@@ -12,11 +12,11 @@
     <main>
         <div class="controls">
             <div class="x1">
-                <a href="/averageTeamSalariesPerYear">Average Team Salaries per Year</a><br /><br />
-                <a href="/highestPaidPlayersPerTeamPerYear">Highest Paid Players per Team per Year</a><br /><br />
-                <a href="/teamPayrollPerWinPerYear">Team Payroll per Win per Year</a><br /><br />
-                <a href="/salariesPerTeamPerYear">Salary Data per Team per Year</a><br /><br />
-                <a href="/playerSalaryOverTime">Player Salary Over Time</a><br /><br />
+                <a href="averageTeamSalariesPerYear">Average Team Salaries per Year</a><br /><br />
+                <a href="highestPaidPlayersPerTeamPerYear">Highest Paid Players per Team per Year</a><br /><br />
+                <a href="teamPayrollPerWinPerYear">Team Payroll per Win per Year</a><br /><br />
+                <a href="salariesPerTeamPerYear">Salary Data per Team per Year</a><br /><br />
+                <a href="playerSalaryOverTime">Player Salary Over Time</a><br /><br />
                 <a href="trivia.html" target="_blank">Trivia Questions</a><br><br>
             </div>
         </div>
